# diskray

./: Cargo.toml  README.md  build.rs
src/: analyzer.rs  app.rs  main.rs  scanner.rs
src/ui/: disks_panel.rs  main_panel.rs  mod.rs  tree_panel.rs
